Controller exception management